kubernetes/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: particular-platform-example
  labels:
    name: particular-platform-example
