kubernetes/servicecontrol-audit.statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicecontrol-audit-service
  namespace: particular-platform-example
  labels:
    app: particular-servicecontrol-audit
spec:
  clusterIP: None
  ports:
  - name: api
    port: 44444
    protocol: TCP
    targetPort: 44444
  - name: ravendb-http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: ravendb-snmp
    port: 161
    protocol: TCP
    targetPort: 161
  selector:
    app: particular-servicecontrol-audit
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: servicecontrol-audit-statefulset
  namespace: particular-platform-example  
spec:
  serviceName: servicecontrol-audit-service
  replicas: 1
  selector:
    matchLabels:
      app: particular-servicecontrol-audit
  updateStrategy:
    type: OnDelete
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
  volumeClaimTemplates:
  - metadata:
      name: audit-db-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
  template:
    metadata:
      labels:
        app: particular-servicecontrol-audit
    spec:
      containers:
        - name: servicecontrol-audit
          image: particular/servicecontrol:latest
          imagePullPolicy: Always
          ports:
          - name: api
            containerPort: 44444
            protocol: TCP
