kubernetes/servicecontrol-error.statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicecontrol-error-service
  namespace: particular-platform-example
  labels:
    app: particular-servicecontrol-error
spec:
  clusterIP: None
  ports:
    - name: api
      port: 33333
      protocol: TCP
      targetPort: 33333
    - name: ravendb-http
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: ravendb-snmp
      port: 161
      protocol: TCP
      targetPort: 161
  selector:
    app: particular-servicecontrol-error
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: servicecontrol-error-statefulset
  namespace: particular-platform-example
spec:
  serviceName: servicecontrol-error-service
  replicas: 1
  selector:
    matchLabels:
      app: particular-servicecontrol-error
  updateStrategy:
    type: OnDelete
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
  volumeClaimTemplates:
    - metadata:
        name: error-db-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
  template:
    metadata:
      labels:
        app: particular-servicecontrol-error
    spec:
      containers:
        - name: servicecontrol-error
          image: particular/servicecontrol:latest
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 33333
              protocol: TCP
          args: ["--setup-and-run"]
