kubernetes/servicecontrol-monitoring.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicecontrol-monitoring-service
  namespace: particular-platform-example
  labels:
    app: particular-servicecontrol-monitoring
spec:
  ports:
  - port: 33633
    name: api
  clusterIP: None
  selector:
    app: particular-servicecontrol-monitoring
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicecontrol-monitoring-deployment
  namespace: particular-platform-example
  labels:
    app: particular-servicecontrol-monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: particular-servicecontrol-monitoring
  template:
    metadata:
      labels:
        app: particular-servicecontrol-monitoring
    spec:
      containers:
        - name: servicecontrol-monitoring
          image: particular/servicecontrol-monitoring:latest
