kubernetes/servicepulse.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicepulse-service
  namespace: particular-platform-example
  labels:
    app: particular-servicepulse
spec:
  ports:
  - port: 9090
    name: frontend
  clusterIP: None
  selector:
    app: particular-servicepulse
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicepulse-deployment
  namespace: particular-platform-example
  labels:
    app: particular-servicepulse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: particular-servicepulse
  template:
    metadata:
      labels:
        app: particular-servicepulse
    spec:
      containers:  
      - name: servicepulse
        image: particular/servicepulse:latest
